--- a/public/index.html
+++ b/public/index.html
@@ -3,10 +3,10 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
+    <meta name="theme-color" content="#FFAAFF" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Show off your portfolio"
     />
     <title>CraftJobs</title>
   </head>
