Add sister preload support

--- a/public/index.html
+++ b/public/index.html
@@ -3,13 +3,10 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#FFAAFF" />
-    <meta
-      name="description"
-      content="Show off your portfolio"
-    />
+    <sister-embeds></sister-embeds>
     <title>CraftJobs</title>
   </head>
+  <script>window.sisterPreload = "sister-preload"</script>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
